k8s/overlays/coretech-1/mdbook/httpRoute.mdbook-redirect.yaml
---
# predictable-yaml: ignore-requireds
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mdbook-redirect
  namespace: mdbook
spec:
  hostnames:
  - book.k8s.iog.io
  - book-staging.k8s.iog.io
