k8s/overlays/coretech-1/mdbook/httpRoute.mdbook-staging.yaml
---
# predictable-yaml: ignore-requireds
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mdbook-staging
  namespace: mdbook
spec:
  hostnames:
  - mdbook-staging.k8s.iog.io
