k8s/overlays/coretech-1/mdbook/httpRoute.mdbook.yaml
---
# predictable-yaml: ignore-requireds
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mdbook
  namespace: mdbook
spec:
  hostnames:
  - mdbook.k8s.iog.io
